--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -71,7 +71,7 @@
     <string name="nothing">No sit-ins for you</string>
     <string name="back_button">Press again to exit</string>
     <string name="downloading">Loading\u2026</string>
-    <string name="footprint">Generated with the GymWenApp: https://asdoi.gitlab.io/</string>
+    <string name="footprint">Generated with the GymWenApp:</string>
     <string name="noInternet">You are not connected to the internet!</string>
     <string name="noInternetConnection">No Internet connection!</string>
     <string name="share_substitution_plan">Send representation to\u2026</string>
@@ -297,9 +297,9 @@
     <string name="share_msg_in_room">in room</string>
     <string name="share_msg_nothing_at">No Sit-in on</string>
     <string name="share_msg_hour">hour</string>
-    <string name="share_msg_nothing_hour">hour is missing</string>
-    <string name="share_msg_nothing_hour_senior">hour is missing for course</string>
-    <string name="share_msg_hour_senior">hour for course</string>
+    <string name="share_msg_dismissed">is missing</string>
+    <string name="share_msg_nothing_senior">is missing for course</string>
+    <string name="share_msg_for_senior">for course</string>
     <string name="share_msg_substitution_at">Sit-in on</string>
     <string name="menu_from_this_developer">By this developer</string>
     <string name="version">Version</string>
@@ -370,7 +370,7 @@
 
     <string name="loading">Loading\u2026</string>
     <string name="set_desc_both">It is always loaded when the app is started, even if it is deactivated!</string>
-    <string name="add_to_my_courses">Add my courses</string>
+    <string name="add_to_my_courses">Add to my courses</string>
     <string name="additum">Additive</string>
     <string name="remove_from_my_courses">Remove from my courses</string>
     <string name="shortcut_website">Website</string>
