--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,8 @@
     <string name="menu_settings">Einstellungen</string>
     <string name="menu_website">Startseite</string>
     <string name="menu_mebis" translatable="false">Mebis</string>
-    <string name="menu_mensa">Mensa (kitafino)</string>c
+    <string name="menu_mensa">Mensa (kitafino)</string>
+    <string name="menu_ms_teams">MS Teams</string>
     <string name="menu_category_other">Diverses</string>
     <string name="menu_category_school">Gymnasium</string>
     <string name="menu_at_one_glance">Auf einen Blick!</string>
@@ -713,5 +714,7 @@
         \nAußerdem werden auf Basis dieses Profils die Benachrichtigungen gesendet und das Smartphone in den Nicht-Stören Modus versetzt.</string>
 
     <string name="corona_live_ticker">Corona Live-Ticker (%s):</string>
+
+    <string name="no_teams_app_installed">MS Teams App nicht installiert!</string>
 
 </resources>
