--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,7 +120,6 @@
     <string name="nothing">Keine Vertretung für dich.</string>
     <string name="nothing_for_whole_day">Keine Vertretungen an diesem Tag.</string>
     <string name="back_button">Erneut drücken zum Beenden</string>
-    <string name="downloading">Lädt\u2026</string>
     <string name="footprint">Mit der GymWen App erzeugt:</string>
     <string name="noInternet">Du bist nicht mit dem Internet verbunden!</string>
     <string name="noInternetConnection">Keine Internetverbindung!</string>
@@ -290,8 +289,8 @@
     <string name="permission_cancel_button">Abbrechen</string>
 
     <!-- TeacherlistFeatures -->
-    <string name="no_email_app">Du hast keine E-Mail App installiert.</string>
-    <string name="no_navigation_app">Du hast keine Navi-App installiert.</string>
+    <string name="no_email_app">Keine E-Mail App installiert</string>
+    <string name="no_navigation_app">Keine Navi-App installiert</string>
     <string name="teacher_no_teacher_found">Es wurde kein Lehrer mit diesen Daten gefunden.</string>
     <string name="search_through">Durchsuchen\u2026</string>
     <string name="teacher_mail">Mail</string>
@@ -633,7 +632,7 @@
     <string name="remove_all_successful">Erfolgreich Alles gelöscht</string>
     <string name="remove_all_failed">Es ist ein Fehler aufgetreten</string>
 
-    <string name="no_calendar_app">Du hast keine Kalender-App installiert</string>
+    <string name="no_calendar_app">Keine Kalender-App installiert</string>
     <string name="add_to_calendar">Soll diese Ereignis zu deinem Kalender hinzugefügt werden?</string>
 
     <string name="change_summary_library">Darstellung ändern</string>
@@ -716,5 +715,9 @@
     <string name="corona_live_ticker">Corona Live-Ticker (%s):</string>
 
     <string name="no_teams_app_installed">MS Teams App nicht installiert!</string>
+    <string name="import_holidays">Ferien importieren</string>
+    <string name="holiday_bavaria">Ferien Bayern %s</string>
+    <string name="downloading">Lädt herunter\u2026</string>
+    <string name="holidays_bavaria_ics">Ferien-Bayern-%s.ics</string>
 
 </resources>
