make "call office" always visible

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -512,7 +512,7 @@
     <string name="office">Office</string>
     <string name="teachers_room">Teacher\'s room</string>
     <string name="rss_notification_channel">Homepage</string>
-    <string name="set_rss_notification">Homepage notification</string>
+    <string name="set_rss_notification">Homepage notification (Feeds)</string>
     <string name="rss_notification_channel_description">A notification of the latest articles on the school homepage</string>
     <string name="rss_feed">RSS-Feed</string>
     <string name="no_navigation_app">No navigation app installed</string>
